GNOME Bugzilla – Bug 642782
[patch] gail_misc_buffer_get_run_attributes doesn't set background-gdk and foreground-gdk
Last modified: 2011-02-20 14:49:44 UTC
Created attachment 181363 [details] [review] getting background-gdk and foreground-gdk correctly In gail_misc_buffer_get_run_attributes there's two calls to g_object_get (tag, ATTR, &c, NULL); to get "background-gdk" and "foreground-gdk". g_object_get should receive a pointer to the stored data and it will create a new object that we should free. Currently "c" is declared like "GdkColor c" and it should be declared as "GdkColor *c".
Thanks, committed.