Correctly treat GdkColor properties

Noticed by Daniel Garcia,
https://bugzilla.gnome.org/show_bug.cgi?id=642782